--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-range": "^1.3.0",
+    "react-input-slider": "^6.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "uuid": "^8.3.2",
